segunda propuesta de lector csv final