@@ -1,81 +1,120 @@
 package ar.edu.utn.frba.dds.domain.csv;
 
-import java.util.Map;
+import com.opencsv.CSVParserBuilder;
+import com.opencsv.CSVReader;
+import com.opencsv.CSVReaderBuilder;
+import com.opencsv.exceptions.CsvException;
+
+import ar.edu.utn.frba.dds.domain.hecho.CampoHecho;
 import ar.edu.utn.frba.dds.domain.hecho.Hecho;
 import ar.edu.utn.frba.dds.domain.info.PuntoGeografico;
 import ar.edu.utn.frba.dds.domain.origen.Origen;
-import com.opencsv.bean.CsvToBeanBuilder;
-import java.io.FileNotFoundException;
+
 import java.io.FileReader;
+import java.io.IOException;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
-import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Date;
-import ar.edu.utn.frba.dds.domain.hecho.CampoHecho;
-import java.util.List;
-import java.time.ZoneId;
-import java.time.LocalDateTime;
-import java.util.Date;
-
-
+import java.util.*;
+import java.util.stream.Stream;
 
 public class UltraBindLector {
 
-  public static List<Hecho> importar(String path, char separador, String formatoFecha, Map<CampoHecho, List<String>> mapeoColumnas) {
-    List<Hecho> hechosImportados = new ArrayList<>();
-    try {
-      List<BindCsv> csvBeanReader = new CsvToBeanBuilder(new FileReader(path))
-          .withSeparator(separador).withIgnoreEmptyLine(true).withType(BindCsv.class).build().parse();
+  public List<Hecho> importar(String path, char separator, String dateFormatStr, Map<CampoHecho, List<String>> mapeoColumnas) {
+    List<Hecho> hechos = new ArrayList<>();
+    SimpleDateFormat dateFormat = new SimpleDateFormat(dateFormatStr);
+    dateFormat.setLenient(false); // ⛔ Esto lo vuelve estricto
 
-      for (BindCsv cr : csvBeanReader) {
-        float latitud = obtenerValorNumerico(cr, mapeoColumnas.get(CampoHecho.LATITUD));
-        float longitud = obtenerValorNumerico(cr, mapeoColumnas.get(CampoHecho.LONGITUD));
 
-        SimpleDateFormat formato = new SimpleDateFormat(formatoFecha);
-        Date fechaSuceso = null;
-        try {
-          String fechaStr = obtenerValorTexto(cr, mapeoColumnas.get(CampoHecho.FECHA_SUCESO), "/");
-          if (fechaStr != null) {
-            fechaSuceso = formato.parse(fechaStr);
-          }
-        } catch (ParseException e) {
-          throw new RuntimeException(e);
+    try (CSVReader reader = new CSVReaderBuilder(new FileReader(path))
+        .withCSVParser(new CSVParserBuilder().withSeparator(separator).build())
+        .build()) {
+
+      String[] headers = reader.readNext();
+      if (headers == null || headers.length == 0) {
+        throw new IllegalArgumentException("El archivo CSV no contiene encabezados");
+      }
+
+      Set<String> columnasPresentes = new HashSet<>(Arrays.asList(headers));
+
+      String[] row;
+      int linea = 1;
+      while ((row = reader.readNext()) != null) {
+        linea++;
+        Map<String, String> fila = new HashMap<>();
+        for (int i = 0; i < headers.length && i < row.length; i++) {
+          fila.put(headers[i], row[i] != null ? row[i].trim() : null);
         }
 
-        PuntoGeografico ubicacion = new PuntoGeografico(latitud, longitud);
-        List<String> etiquetasVacias = new ArrayList<>();
-        String direccion = obtenerValorTexto(cr, mapeoColumnas.get(CampoHecho.DIRECCION), ", ");
+        String titulo = extraerCampo(fila, mapeoColumnas.get(CampoHecho.TITULO), columnasPresentes);
+        String descripcion = extraerCampo(fila, mapeoColumnas.get(CampoHecho.DESCRIPCION), columnasPresentes);
+        String categoria = extraerCampo(fila, mapeoColumnas.get(CampoHecho.CATEGORIA), columnasPresentes);
+        String direccion = extraerCampo(fila, mapeoColumnas.get(CampoHecho.DIRECCION), columnasPresentes);
 
-        Hecho hecho = new Hecho(
-            obtenerValorTexto(cr, mapeoColumnas.get(CampoHecho.TITULO), " "),
-            obtenerValorTexto(cr, mapeoColumnas.get(CampoHecho.DESCRIPCION), " "),
-            obtenerValorTexto(cr, mapeoColumnas.get(CampoHecho.CATEGORIA), " "),
-            direccion,
-            ubicacion,
-            fechaSuceso,
-            Date.from(LocalDateTime.now().atZone(ZoneId.systemDefault()).toInstant()),
-            Origen.DATASET,
-            etiquetasVacias
-        );
+        String latStr = extraerCampo(fila, mapeoColumnas.get(CampoHecho.LATITUD), columnasPresentes);
+        String lonStr = extraerCampo(fila, mapeoColumnas.get(CampoHecho.LONGITUD), columnasPresentes);
+        Double latitud = parseDouble(latStr);
+        Double longitud = parseDouble(lonStr);
+        PuntoGeografico ubicacion = (latitud != null && longitud != null) ? new PuntoGeografico(latitud, longitud) : null;
 
-        hechosImportados.add(hecho);
+        String fechaStr = extraerCampo(fila, mapeoColumnas.get(CampoHecho.FECHA_SUCESO), columnasPresentes);
+        Date fechaSuceso = parseFecha(fechaStr, dateFormat);
+
+        boolean datosValidos = titulo != null && fechaSuceso != null;
+
+        if (datosValidos) {
+          Hecho hecho = new Hecho(
+              titulo,
+              descripcion,
+              categoria,
+              direccion,
+              ubicacion,
+              fechaSuceso,
+              new Date(),
+              Origen.DATASET,
+              List.of()
+          );
+          hechos.add(hecho);
+        } else {
+          System.err.println("[Línea " + linea + "] Fila descartada por datos insuficientes");
+        }
       }
-    } catch (FileNotFoundException e) {
-      throw new RuntimeException(e);
+
+    } catch (IOException | CsvException e) {
+      throw new RuntimeException("Error al leer el archivo CSV", e);
     }
-    return hechosImportados;
+
+    return hechos;
   }
 
-  private static float obtenerValorNumerico(BindCsv cr, List<String> columnas) {
-    String valor = obtenerValorTexto(cr, columnas, "");
-    if (valor != null && !valor.isBlank()) {
-      return Float.parseFloat(valor);
-    }
-    return 0;
+  private String extraerCampo(Map<String, String> fila, List<String> columnas, Set<String> columnasPresentes) {
+    if (columnas == null) return null;
+    return columnas.stream()
+        .peek(col -> {
+          if (!columnasPresentes.contains(col)) {
+            System.err.println("Advertencia: columna "+ col +" no encontrada en CSV");
+          }
+        })
+        .map(fila::get)
+        .filter(s -> s != null && !s.trim().isEmpty())
+        .reduce((a, b) -> a + " " + b)
+        .orElse(null);
   }
 
-  private static String obtenerValorTexto(BindCsv cr, List<String> columnas, String separador) {
-    return cr.concatenarColumnas(columnas, separador);
+  private Double parseDouble(String valor) {
+    try {
+      return valor != null ? Double.parseDouble(valor.trim()) : null;
+    } catch (Exception e) {
+      System.err.println("Error al parsear double: '" + valor + "'");
+      return null;
+    }
+  }
+
+  private Date parseFecha(String valor, SimpleDateFormat dateFormat) {
+    try {
+      return valor != null ? dateFormat.parse(valor.trim()) : null;
+    } catch (ParseException e) {
+      System.err.println("Error al parsear fecha: '" + valor + "'");
+      return null;
+    }
   }
 }
